--- a/Pong-slutprojekt/Pong-slutprojekt.csproj
+++ b/Pong-slutprojekt/Pong-slutprojekt.csproj
@@ -17,9 +17,9 @@
     <Resource Include="img\ball.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Page Include="img\player.png">
+    <Resource Include="img\player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Page>
+    </Resource>
     <Resource Include="img\white_lines.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
